[gd_scene load_steps=10 format=3 uid="uid://du6smcuy0iy82"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1l4y6"]
[ext_resource type="AudioStream" uid="uid://ckr2fdfqgntvp" path="res://assets/sounds/pickup.ogg" id="3_djr8t"]
[ext_resource type="PackedScene" uid="uid://cwptn1gqscqu2" path="res://scenes/ball.tscn" id="3_uuvnx"]
[ext_resource type="AudioStream" uid="uid://vn2pu2g3t6of" path="res://assets/sounds/die.ogg" id="4_37y7n"]
[ext_resource type="AudioStream" uid="uid://bqq8kpnayga83" path="res://assets/sounds/hit.ogg" id="5_pltlt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmmen"]
radius = 6.1

[sub_resource type="Animation" id="Animation_ud84e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("1:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("5:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("5:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.663793, 0.663793)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("3:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, 4)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("4:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, 4)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("3:z_index")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("4:z_index")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("4:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.663793, 0.663793)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("3:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.663793, 0.663793)]
}

[sub_resource type="Animation" id="Animation_qjk1e"]
resource_name = "electron_on_player"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, 4), Vector2(-12, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.533334, 1.56667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.35, 0.35)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("1:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.866667, 1.06667, 1.93334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, -1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, 4), Vector2(12, -4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.466667, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("2:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8, 1, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, 1, -1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("3:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.25, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, -4), Vector2(12, 4)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("3:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("3:z_index")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 1]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("4:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.35, 1.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, -4), Vector2(-12, 4)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("4:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.1, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.35, 0.35)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("4:z_index")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.1, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, -1]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("5:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, -12)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("5:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0.2, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("5:z_index")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0.2, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4lty"]
_data = {
"RESET": SubResource("Animation_ud84e"),
"electron_on_player": SubResource("Animation_qjk1e")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.66, 1.66)
collision_layer = 769
script = ExtResource("1_1l4y6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rmmen")

[node name="ball" parent="." instance=ExtResource("3_uuvnx")]

[node name="eletrons" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="eletrons"]
libraries = {
"": SubResource("AnimationLibrary_f4lty")
}
autoplay = "electron_on_player"
speed_scale = 1.666

[node name="1" parent="eletrons" instance=ExtResource("3_uuvnx")]
visible = false
position = Vector2(-7, 0)
color = Color(0.768627, 0.768627, 0.768627, 0.768627)
radius = 2.0

[node name="2" parent="eletrons" instance=ExtResource("3_uuvnx")]
visible = false
z_index = 1
position = Vector2(11.2, -3.73333)
scale = Vector2(0.706451, 0.706451)
color = Color(0.768627, 0.768627, 0.768627, 0.768627)
radius = 2.0

[node name="3" parent="eletrons" instance=ExtResource("3_uuvnx")]
visible = false
z_index = -1
position = Vector2(-12, 4)
scale = Vector2(0.663793, 0.663793)
color = Color(0.768627, 0.768627, 0.768627, 0.768627)
radius = 2.0

[node name="4" parent="eletrons" instance=ExtResource("3_uuvnx")]
visible = false
z_index = -1
position = Vector2(-12, 4)
scale = Vector2(0.663793, 0.663793)
color = Color(0.768627, 0.768627, 0.768627, 0.768627)
radius = 2.0

[node name="5" parent="eletrons" instance=ExtResource("3_uuvnx")]
visible = false
z_index = -1
position = Vector2(-12, 4)
scale = Vector2(0.663793, 0.663793)
color = Color(0.768627, 0.768627, 0.768627, 0.768627)
radius = 2.0

[node name="PickUpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_djr8t")
volume_db = -10.0
bus = &"SFX"

[node name="DieAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_37y7n")
bus = &"SFX"

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pltlt")
bus = &"SFX"
